--- a/E0-Practise/package.json
+++ b/E0-Practise/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "e2-igniting-our-app",
+  "name": "react-practise",
   "version": "1.0.0",
   "description": "This is Episode 2 of Namaste React Series",
   "scripts": {
@@ -11,15 +11,18 @@
   "license": "ISC",
   "devDependencies": {
     "assert": "^2.0.0",
+    "autoprefixer": "^10.4.15",
     "browserify-zlib": "^0.2.0",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
     "events": "^3.3.0",
     "parcel": "^2.9.3",
     "path-browserify": "^1.0.1",
+    "postcss": "^8.4.29",
     "process": "^0.11.10",
     "stream-browserify": "^3.0.0",
     "string_decoder": "^1.3.0",
+    "tailwindcss": "^3.3.3",
     "util": "^0.12.5"
   },
   "dependencies": {
