--- a/E9-Optimizing-Our-App/package.json
+++ b/E9-Optimizing-Our-App/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "This is the episode 3 of Namaste React series",
   "scripts": {
-    "start": "parcel index.html",
+    "start": "GENERATE_SOURCEMAP=false && parcel index.html",
     "build": "parcel build index.html",
     "test": "jest"
   },
